Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8152634
generalize exception throwing routines in JVMCIRuntime
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P3
Fix Version/s:
9
Affects Version/s:
None
Component/s:
hotspot
Labels:
jvmci
Subcomponent:
compiler
Resolved In Build:
b114
Description
Currently there are hardcoded routines for throwing NullPointerException and ArrayIndexOutOfBoundsException from compiled code. This needs to be generalized to allow JVMCI compilers to throw arbitrary exceptions.
Attachments
Activity
People
Assignee:
Roland Schatz
Reporter:
Roland Schatz
Votes
:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
2016-03-24 02:23
Updated:
2016-04-14 09:14
Resolved:
2016-03-29 17:31