8152634: generalize exception throwing routines in JVMCIRuntime

Reviewed-by: twisti